480: return user object in login and refresh responses
